Prevent save on default list Prevent collapse of navbar

--- a/app/css/taskManager.css
+++ b/app/css/taskManager.css
@@ -49,7 +49,7 @@ body {
     background: #8ABF39
 }
 
-#selectionMenu{
+#selectionMenu {
     z-index: 9999;
 }
 
@@ -124,4 +124,24 @@ kbd {
     -webkit-border-radius: 6px 0 6px 6px;
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
+}
+
+
+/* prevent the navbar collapse */
+
+.navbar-collapse.collapse {
+    display: block!important;
+}
+
+.navbar-nav>li,
+.navbar-nav {
+    float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+    margin-right: -15px !important;
+}
+
+.navbar-right {
+    float: right!important;
 }
